# Project

./: .gitignore  README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
shop/: admin.py  cart.py  forms.py  models.py  product_images.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_product_author.py  0003_remove_product_is_active_remove_product_slug.py  0004_order_user_alter_category_name_alter_category_slug_and_more.py
static/: styles.css
templates/: base.html  cart.html  checkout.html  checkout_success.html  index.html  order_detail.html  order_list.html  product_confirm_delete.html  product_detail.html  product_form.html
templates/registration/: login.html  signup.html
