[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.22.9",
    "django>=6.0.4",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pyright>=1.1.408",
]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
